<resources>
    <string name="app_name">Greme</string>

    <!--login-->
    <string name="login_guide">로그인</string>
    <string name="login_app_name">GREME</string>

    <!-- BottomNavigation -->
    <string name="bottomnavigation_home">Home</string>
    <string name="bottomnavigation_diary">Diary</string>
    <string name="bottomnavigation_search">Search</string>
    <string name="bottomnavigation_setting">Setting</string>
    <string name="bottomnavigation_homepage">홈</string>
    <string name="bottomnavigation_diarypage">다이어리</string>
    <string name="bottomnavigation_searchpage">검색</string>
    <string name="bottomnavigation_settingpage">환경설정</string>

    <!--SignUp-->
    <string name="signup_welcome">오늘부터 그리미랑 함께해서 반가워요</string>
    <string name="signup_guide">사용하시려는 ID를 적어주세요</string>
    <string name="signup_duplicate">중복된 ID 입니다.</string>
    <string name="signup_length">아이디는 3글자 이상 15글자 이내여야 합니다.</string>
    <string name="signup_char">아이디는 영어 대소문자, 숫자, _ 기호만 가능합니다.</string>
    <string name="signup_need_no_blank">아이디에 공백은 불가능합니다.</string>
    <string name="signup_hint">ID</string>
    <string name="signup_button">다음으로 넘어가기</string>
    <string name="signup_ok">👍 사용 가능한 아이디입니다.</string>
    <string name="signup_check_duplicate">중복 검사 중입니다...</string>
    <string name="signup_interest_welcome">%s 님!\n반가워요!</string>
    <string name="signup_interest_guide">회원님의 최근 관심사를 모두 골라주세요!</string>
    <string name="signup_interest_guide_small">해당 관심사에 따라 추천 게시물이 달라져요</string>
    <string name="button_more_info">추가 정보 입력하기!</string>
    <string name="button_next">다음으로 넘어가기</string>
    <string name="signup_info_user">%s 님은</string>
    <string name="signup_info_guide_region1">주로 활동하는 지역을 선택해주세요!</string>
    <string name="signup_info_guide_region2">해당 지역에 따라 추천 게시물이 달라져요</string>
    <string name="signup_info_guide_purpose1">활동 목적을 선택해주세요!</string>
    <string name="signup_info_guide_purpose2">활동 목적에 따라 추천 게시물이 달라져요</string>
    <string name="signup_finish_title">이제 회원가입이 완료되었어요!</string>
    <string name="signup_finish_guide1">그리미에서는</string>
    <string name="signup_finish_guide2">다이어리처럼 나의 eco 삶을 기록할 수 있고</string>
    <string name="signup_finish_guide3">챌린지를 활용해 목표를 달성하고</string>
    <string name="signup_finish_guide4">이를 쉽게 공유할 수 있습니다!</string>
    <string name="signup_finish_guide5">프로필 사진이나</string>
    <string name="signup_finish_guide6">소개 문구 등을 바꾸길 원하시면</string>
    <string name="signup_finish_guide7">환경설정에서 가능합니다!</string>

    <!--interest-->
    <string name="ic_energy">에너지</string>
    <string name="ic_upCycle">업사이클링</string>
    <string name="ic_ecoProduct">친환경 제품</string>
    <string name="ic_vegan">(비건) 채식</string>
    <string name="ic_cosmetic">(비건) 화장품</string>

    <!--additional info-->
    <string name="info_gender_male">남성</string>
    <string name="info_gender_female">여성</string>
    <string name="info_gender_whatever">무엇이든</string>

    <!--challenge-->
    <string name="challenge_guide">지금 바로 챌린지에 참여할 수 있어요!\n“다이어리”에서 나의 챌린지를 기록할 수 있어요</string>
    <string name="challenge_ongoing"><b>참여중인 챌린지</b></string>
    <string name="challenge_available"><b>참여 가능 챌린지</b></string>
    <string name="challenge_info_participate">등록하기</string>
    <string name="challenge_info_exception">제외하기</string>

    <!--purpose-->
    <string-array name="signup_purpose">
        <item>선택 안 함</item>
        <item>환경에 관심을 갖기 위해서</item>
        <item>사람들과 같이 활동하기 위해서</item>
        <item>좋은 제품을 추천받고 싶어서</item>
    </string-array>


    <!--region-->
    <string-array name="regionLarge">
        <item>선택 안 함</item>
        <item>서울특별시</item>
        <item>부산광역시</item>
        <item>대구광역시</item>
        <item>인천광역시</item>
        <item>광주광역시</item>
        <item>대전광역시</item>
        <item>울산광역시</item>
        <item>세종특별자치시</item>
        <item>경기도</item>
        <item>강원도</item>
        <item>충청북도</item>
        <item>충청남도</item>
        <item>전라북도</item>
        <item>전라남도</item>
        <item>경상북도</item>
        <item>경상남도</item>
        <item>제주특별자치도</item>
    </string-array>


    <!-- Setting -->
    <string name="setting_test_id">TEST_ID</string>
    <string name="setting_profile_modify">프로필 수정</string>
    <string name="setting_participated_challenge">이번달 참여한 챌린지</string>
    <string name="setting_hashtag">#</string>
    <string name="setting_challenge_title">가까운 거리는 걸어다니기</string>
    <string name="setting_challenge_content">도보로 15분 이내의 거리는 걸어다니기</string>
    <string name="setting_Dday">D-10</string>
    <string name="setting_challenge_participant">25</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_secession">회원 탈퇴</string>
    <string name="setting_profile_edit">프로필 수정</string>
    <string name="setting_profile_plus">프로필 사진 변경</string>

    <!-- Diary -->
    <string name="diary_month">January</string>
    <string name="diary_year">2023</string>
    <string name="diary_day">TUE</string>
    <string name="diary_date">23</string>
    <string name="diary_disclosure_title">공개 여부</string>
    <string name="diary_disclosure_content">공개 시, 챌린지에 나의 다이어리가 공개됩니다.</string>
    <string name="diary_save">저장하기</string>
    <string name="diary_today">오늘의 일기!</string>
    <string name="diary_edit">수정하기</string>
    <string name="diary_delete">삭제하기</string>
    <string name="diary_challenge_plus">챌린지 추가하기</string>

    <!-- DiaryImg -->
    <string name="diaryimg_month">2022.10</string>
    <!-- DiaryDetail -->
    <string name="diarydetail_title">자세히 보기</string>
    <string name="diarydetail_hashtag">#텀블러 #다회용기 #비건식</string>
    <string name="diarydetail_hashtag2">#가까운 거리 #대중교통X</string>
    <string name="diarydetail_challenge">#텀블러 사용하기</string>
    <string name="diarydetail_challenge2"># 가까운 거리는 걸어다니기</string>
    <string name="diarydetail_content">오늘도 대중교통을 이용하지 않고 가까운 거리를 걸었다. 오늘 하루도 정말 뿌듯했다.</string>
    <string name="diarydetail_content2">오늘도 음료를 마실 때마다 텀블러를 사용했다. 일회용 컵을 사용하지 않으니 친환경적인 삶을 제대로 살고 있는 것 같아 기분이 좋다.</string>
    <string name="diarydetail_date">2023/01/18</string>

    <!-- Search -->
    <string name="search_describe">찾고 싶은 검색어를 입력해 주세요!</string>
    <string name="search_result">검색 결과</string>
    <string name="search_testID">yejinchoco</string>
    <string name="search_testID2">sangin</string>

    <!-- Spinner Challenge Array -->
    <string-array name="spinner_challenge">
        <item># 텀블러 사용하기</item>
        <item># 가까운 거리는 걸어다니기</item>
        <item># 따뜻하게 입고 다니기</item>
    </string-array>

    <!-- Calendar Array -->
    <string-array name="calendar_day">
        <item>SAT</item>
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
    </string-array>

</resources>