<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="ViewModel"
            type="com.shootit.greme.viewmodel.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/margin80"
        android:paddingHorizontal="@dimen/margin24">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_interest_welcome"
            android:textSize="@dimen/text18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvGuide1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_interest_guide"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin60"
            android:textSize="@dimen/text14"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome"/>
        
        <TextView
            android:id="@+id/tvGuide2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_interest_guide_small"
            android:layout_marginVertical="@dimen/margin8"
            android:textSize="@dimen/text12"
            app:layout_constraintTop_toBottomOf="@+id/tvGuide1"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/signup_et_no_error"/>

        <LinearLayout
            android:id="@+id/linear_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/margin24"
            app:layout_constraintTop_toBottomOf="@+id/tvGuide2">

            <com.shootit.greme.ui.view.InterestButton
                android:id="@+id/btnEnergy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/margin24"
                app:interest_icon="@drawable/ic_energy"
                app:interest_description="@string/ic_energy"
                />

            <com.shootit.greme.ui.view.InterestButton
                android:id="@+id/btnUpCycling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/margin24"
                app:interest_icon="@drawable/ic_recycle"
                app:interest_description="@string/ic_upCycle"
                />

            <com.shootit.greme.ui.view.InterestButton
                android:id="@+id/btnEcoProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:interest_icon="@drawable/ic_eco_product"
                app:interest_description="@string/ic_ecoProduct"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/margin24"
            android:layout_marginBottom="@dimen/margin24"
            app:layout_constraintTop_toBottomOf="@+id/linear_top"
            tools:layout_editor_absoluteX="24dp">

            <com.shootit.greme.ui.view.InterestButton
                android:id="@+id/btnVeganFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/margin24"
                app:interest_description="@string/ic_vegan"
                app:interest_icon="@drawable/ic_vegan" />

            <com.shootit.greme.ui.view.InterestButton
                android:id="@+id/btnVeganCosmetic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:interest_description="@string/ic_cosmetic"
                app:interest_icon="@drawable/ic_cosmetic" />


        </LinearLayout>

        <Button
            android:id="@+id/btnMoreInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> ViewModel.transitionToMoreInfo()}"
            android:text="@string/button_more_info"
            android:layout_marginHorizontal="@dimen/margin40"
            android:layout_marginTop="@dimen/margin60"
            app:layout_constraintTop_toBottomOf="@+id/linear_bottom"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> ViewModel.transitionToID()}"
            android:text="@string/button_next"
            android:layout_marginHorizontal="@dimen/margin40"
            android:backgroundTint="@color/signup_next"
            android:layout_marginTop="@dimen/margin12"
            app:layout_constraintTop_toBottomOf="@+id/btnMoreInfo"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>