<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_participated_challenge"
    android:paddingBottom="16dp"
    android:layout_marginBottom="4dp">

    <TextView
        android:id="@+id/tvHashtag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/setting_hashtag"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvChallengeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/setting_challenge_title"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvHashtag"
        app:layout_constraintStart_toEndOf="@id/tvHashtag"
        app:layout_constraintTop_toTopOf="@id/tvHashtag" />

    <TextView
        android:id="@+id/tvChallengeContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/setting_challenge_content"
        android:textColor="#CBCBCB"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/tvHashtag"
        app:layout_constraintTop_toBottomOf="@id/tvHashtag" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfile"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintEnd_toStartOf="@id/tvChallengeParticipant"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvChallengeParticipant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_challenge_participant"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/ivProfile"
        app:layout_constraintBottom_toBottomOf="@id/ivProfile"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvDday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_Dday"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:background="@drawable/bg_dday"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/ivProfile"
        app:layout_constraintEnd_toEndOf="@id/tvChallengeParticipant" />


</androidx.constraintlayout.widget.ConstraintLayout>