<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.DiaryDetailActivity">

    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_app_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvPageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diarydetail_title"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogo"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPageName"/>

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDiaryDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginHorizontal="24dp"
        android:paddingHorizontal="28dp"
        android:paddingVertical="20dp"
        android:background="@drawable/bg_diarybox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack">

        <ImageView
            android:id="@+id/ivMain"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:src="@drawable/ex_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvHashtag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/diarydetail_hashtag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivMain" />

        <TextView
            android:id="@+id/tvChallenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/diary_save"
            android:text="@string/diarydetail_challenge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHashtag" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/diarydetail_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvChallenge" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14dp"
            android:textColor="@color/diary_date"
            android:text="@string/diarydetail_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvContent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clDiaryDetail">

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="156dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/diary_save"
            android:text="@string/diary_edit"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnDelete"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="156dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/diary_save"
            android:text="@string/diary_delete"
            android:textColor="@color/black"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnEdit"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>